Actualizada configuracion buildout para instalar Sphinx

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -4,7 +4,7 @@
 [buildout]
 newest = false
 
-#index = http://pypi.cenditel/
+#index = http://localhost/packages
 find-links =
     http://b.pypi.python.org
     http://c.pypi.python.org
@@ -13,15 +13,7 @@ find-links =
 versions = versions
 
 extensions =
-    mr.developer
     buildout.dumppickedversions
-
-# mr.developer configurations
-# For options see http://pypi.python.org/pypi/mr.developer
-sources-dir = src
-sources = sources
-always-checkout = true
-auto-checkout = *
 
 # buildout.dumppickedversions configurations
 # For options see http://pypi.python.org/pypi/buildout.dumppickedversions
