--- a/sphinx.cfg
+++ b/sphinx.cfg
@@ -1,5 +1,5 @@
 #
-# A Buildout configuration for install Sphinx tools and
+# A Buildout configuration for install Sphinx tools
 #
 [buildout]
 parts = 
